Changes for REDIPS.drag library

4.6.9
- fixed bug in save_content() - DIV elements without "drag" class name are skipped - thanks to CG Developer

4.6.8
- modified save_content() method
  * first parameter is id or table reference
  * second parameter is optional and defines output in JSON format
  * table index is not contained in output because save_content() scans content for asked table (table is already known)

4.6.7
- method shift_cells() is declared as public
- fixed bug in case of enable_drag() for newly added DIV element to the table

4.6.6
- added option multiple_drop with options "top" and "bottom" (default value is "bottom") - thanks to Mark Jacobs
- added event handler myhandler_row_dropped_before() - if false is return from this event handler then row drop will be canceled
- added public method delete_object() 

4.6.5
- added threshold value (after threshold value is prevailed then events will be fired) - only for cell mode
- known BUG - IE8 not playing nicely with example11 - TODO

4.6.4
- fixed bug for disabled tables inside DIV element
- fixed "nolayout" option for nested tables

4.6.3
- in "switch" mode, reference of last switched element (because TD can contain more elements) will be saved in REDIPS.drag.obj_old property

4.6.2
- added shift_option public property
- added 4 shift modes: horizontal1, horizontal2, vertical1 and vertical2
- extended find_cell method with values "first", "firstInColumn", "firstInRow", "last", "lastInColumn", "lastInRow"
- added public property hover_border (in "row" mode borderTop or borderBottom will be show where whether row will be dropped above or below current row)
- REDIPS.drag.hover_color is no longer used
- working on examples (improving)

4.6.1
- fixed bug with moving table row between two tables (added get_table_index)
  * in line 3080 -> row_drop(get_table_index(p.target[0]), p.target[1], p.obj);

4.6.0
- added support for touch devices (touchstart, touchmove, touchend)